# PetPythonPlaywright

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Jenkinsfile  Makefile  README.md  TODO.md  conftest.py  docker-compose.yml  index.html  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  todo.txt
.github/workflows/: black_autoformat.yml  lint.yml  playwright_tests.yml  pylint.yml  python-app.yml
api/: api_client.py  base_api.py  sign_up_endpoint.py
application/: abstract_application.py  common.py  shopping_store_application.py
application/factories/: endpoint_factory.py  page_factory.py
data/: behaviors.json  credit_card_details.json  delivery_address.csv  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 39f8f2fdbc007d9c.txt  7bfad1bc98d8108e.txt  7cecd4826363b310.txt
data/test-cases/: 10c5490c3dbd8c2f.json  10d93bf450884a34.json  117ae1ba0206ef88.json  154ac7261e29bdb6.json  1552f790d6d5980c.json  15ded0fcc3ef8e.json  1616ec6be6e0e774.json  165fa71c19b3b0d9.json  1921b54805d9a8fe.json  19b7f80c6903a1ea.json  1a5567e32276842d.json  1a7dc237dc93fc75.json  1b3f65010f5f544.json  1b4fa337b29e25b6.json  1de7f1fa1ee45ce2.json  203bbc0aa6662048.json  20b309a2065ee6c8.json  2101f67980ef7ad.json  24c52dc737b2aef9.json  25b7ff145a59351b.json  261006604df0318d.json  264cff98dbd35c9c.json  26612664e00ab444.json  286a95ef7dc327db.json  2c57e4f8e266fb18.json  2c751c0f36098b41.json  2d332e9c183fc2c.json  2df5ff07b75dca10.json  2e22fc64f97e3325.json  3012ac585b5026.json  3015b9abb0590d32.json  309b4e7c57f9f08b.json  3160c11f926da851.json  3171b77eff2ff56c.json  319d231280927e4d.json  328ea0bbaf7377a5.json  32ad7b2af1f59e1a.json  32ffac78654c19fe.json  35354bcbb70d810e.json  358a6000e574ff06.json  (+169 more)
endpoints/: sign_up_endpoint.py
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
jenkins/: Dockerfile
pages/: arts_page.py  base_page.py  basket_page.py  delivery_details_page.py  logged_in_successfully_page.py  login_page.py  my_account_page.py  payment_page.py  sign_up_page.py  thank_you_page.py
tests/: test_login.py  test_login_negative.py  test_logout.py
utils/: ai_helper.py  constants.py  file_reader.py  logger.py  paths.py
widgets/: duration-trend.json  duration.json  severity.json  status-chart.json  summary.json
(+8 files in other folders)
