[project]
name = "petpythonplaywright"
version = "0.1.0"
description = "Pet repository for practicing Python + Playwright"
authors = [
    { name = "Pavlo Kuravskyi", email = "pkuravsky@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright (>=1.51.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-playwright (>=0.7.0,<0.8.0)",
    "pytest-xdist (>=3.6.1,<4.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "allure-pytest (>=2.14.0,<3.0.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "vulture (>=2.14,<3.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pytest-json-report (>=1.5.0,<2.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "grip (>=4.6.2,<5.0.0)"
]

[tool.poetry]
package-mode = false

# vulture linter settings
[tool.vulture]
exclude = [".venv"]
make_whitelist = true
paths = ["."]
min_confidence = 80

# mypy linter settings
[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]

# black linter settings
[tool.black]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "positive: All positive tests",
    "negative: All negative tests",
    "visual: All visual comparison tests",
    "ui: All UI tests",
    "smoke: All smoke tests",
    "wip: Broken tests that are expected to fail for some reason"
]
addopts = [
    "--no-header",
    "--verbose",
    "--tb=short",
    "--alluredir=",
    "--clean-alluredir",
    "--json-report",
    "--json-report-file="
]
